# aichat-system

./: .gitignore  pyproject.toml  readme.md
aichatsystem/: console_chat.py  discord_bot.py  sound_test.py
aichatsystem/llm/: gemini_wrapper.py  llm_wrapper.py  openai_wrapper.py
aichatsystem/systemlogger/: discord_logger.py
aichatsystem/tts/: google_tts_wrapper.py  tts_wrapper.py  voicevox_wrapper.py
aichatsystem/utilities/: config_utilities.py  log_utilities.py  sound_utilities.py  text_utilities.py
configs/: sample_config.yaml
prompt_files/character/: ni-tyan.csv  nojyaloli.csv
prompt_files/system/: consolechat.csv  voicechat.csv
tests/: test_llm.py  test_tts.py
